--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -353,7 +353,7 @@ visibility: visible;
       background-color: #fff;
       border-radius: 4px;
     top: 0px;
-    left: 50px;
+    left: 0px;
     height: 300px;
     box-shadow: 1px -1px 4px #ccc;
     border:1px solid #444444;
@@ -411,9 +411,9 @@ visibility: visible;
     
 }
 .col-bg-color2{
- background-color: white ;
+ background-color: rgb(250, 250, 250) ;
 
- opacity: 100%;
+ opacity: 10%;
  
 }
 
